# mandarin

./: .gitignore  Makefile.toml  README.md
.github/workflows/: build.yml  test.yml
bootloader/: .gitignore  Cargo.toml  Makefile.toml
bootloader/src/: elf.rs  main.rs
kernel/: .gitignore  Cargo.toml  Makefile.toml  x86_64-unknown-none-elf.json
kernel/.cargo/: config.toml
kernel/src/: console.rs  global.rs  graphics.rs  main.rs  pci.rs  sync.rs  usb.rs  utils.rs  x86.rs
kernel/src/utils/: array_map.rs  bitfield.rs  buffer.rs  eq_match.rs  fixed_vec.rs  mod.rs  static_malloc.rs
