[package]
name = "kernel"
version = "0.1.0"
authors = ["algon-320 <algon.0320@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
default = ["graphics", "log_level_info"]
graphics = []

log_level_trace = ["log_level_debug"]
log_level_debug = ["log_level_info"]
log_level_info = ["log_level_warn"]
log_level_warn = ["log_level_error"]
log_level_error = []
